PRL-5566 - Sonar issue fixes